...
  init(endpointURL: URL = URL(string: "http://example.com")!, apiKey: String? = nil) {
    self.endpointURL = endpointURL
    self.apiKey = apiKey
  }

  func fetchAvailableModels() async throws -> [String] {
    return ["MockModel1", "MockModel2", "MockModel3"]
  }

  func streamChat(
    messages: [ChatMessagePayload],
    modelName: String,
    model: ChatModel
...

  func generateTitle(
    for message: String,
    modelName: String
  ) async throws -> String {
    // Return a mock title.
    return "Mock Title"
  }
}

