...
            Text(draftingText)
              .lineLimit(1)
              .truncationMode(.tail)

            Spacer()

            Button("Stop", action: { selectedDraftApp = nil })
              .buttonStyle(PlainButtonStyle())
              .padding(6)
              .background(Color.black.opacity(0.2))
              .foregroundColor(.white)
              .cornerRadius(8)
          }
...
        }) {
          Image(systemName: "cursorarrow.motionlines")
            .font(.title3)
            .foregroundStyle(selectedDraftApp != nil ? .blue : .gray)
        }
        .buttonStyle(.plain)
        .accessibilityLabel("Open Drafting Options")
        .popover(isPresented: $isShowingPopover, arrowEdge: .top) {
          DraftingPopover(selectedDraftApp: $selectedDraftApp, isShowingPopover: $isShowingPopover)
        }

        Button(action: {
          draftWithLastApp()
...
